# AutoGoo

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: obsidian-recorder.md
.claude/skills/auto-goo/: SKILL.md
agents/: obsidian-recorder.md
commands/: auto-goo.md  goo-benchmark.md  goo-brainstorm.md  goo-continue.md  goo-daily-report.md  goo-improve.md  goo-init.md  goo-plan.md  goo-start.md  goo-status.md  goo-usage-analyse.md  goo-usage.md  usage-analyse.md
skills/auto-goo/: SKILL.md
skills/auto-goo/examples/: csv-analysis-workflow.md  multi-step-orchestration.md  optimization-workflow.md
skills/auto-goo/references/: execution-engine.md  setup.md  (+6 more)
src/: fibonacci.py  html_link_extractor.py  http_file_server.py  password_gen.py  sch2qa.py  sch2qa_continue.py  temp_converter.py  text_stats.py
src/base64_codec/: __init__.py  base64_codec.py
src/csv_filter/: __init__.py  csv_filter.py
src/dag_test/: final_report.md  monthly_trend.json  region_stats.json  sales_data.csv  step_a_generate_data.py  step_b1_region_stats.py  step_b2_monthly_trend.py  step_c_merge_report.py
src/data_batch/: batch_process.py
src/file_batch_rename/: __init__.py  renamer.py
src/json_merge/: json_merge.py
src/json_opt/: __init__.py  baseline.py  benchmark.py  optimized.py  profiler.py  run_optimization.py  test_data.py
src/model_train/: baseline.py
src/orchestrator/: __init__.py  engine.py  scheduler.py
src/url_health/: url_health.py
tests/: test_scheduler.py
(+15 files in other folders)
